# nonebot_plugin_orangedice

./: .gitignore  .pdm.toml  LICENSE  README.md  card.py  config.py  dice.bnf  dice.py  log.py  pyproject.toml  roll.py  test.py
.github/workflows/: python-package.yml
nonebot_plugin_orangedice/: __init__.py  card.py  config.py  dice.py  log.py  message.py  model.py  roll.py  utils.py
