[tool.pdm]

[project]
name = "nonebot_plugin_orangedice"
version = "0.2.0"
description = "A COC dice for nonebot2"
authors = [
    {name = "BigOrangeQWQ", email = "2284086963@qq.com"},
]
dependencies = [
    "pydantic>=1.9.2",
    "nonebot2>=2.0.0b5",
    "nonebot-adapter-onebot>=2.1.3",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"