[tool.pdm]

[project]
name = "nonebot_plugin_orangedice"
version = "0.3.9"
description = "A COC dice plugin for nonebot2"
authors = [
    {name = "BigOrangeQWQ", email = "2284086963@qq.com"},
]
dependencies = [
    "pydantic>=1.9.2",
    "sqlmodel>=0.0.8",
    "nonebot2>=2.0.1",
    "nonebot-adapter-onebot>=2.2.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["nonebot", "tests"]
extra_standard_library = ["typing_extensions"]

[tool.pyright]
reportShadowedImports = false
pythonVersion = "3.8"
pythonPlatform = "All"
executionEnvironments = [
  { root = "./tests", extraPaths = ["./"] },
  { root = "./" },
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
